# dgm-fit

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  conftest.py  pyproject.toml
dgf_statistics/: __init__.py  chi2.py  cnp_stat.py  log_poisson_const.py  log_poisson_main.py  monte_carlo.py
dgf_statistics/minimizer/: iminuit_minimizer.py  iminuitminimizer.py  minimizable.py  minimizerbase.py
src/dgm_fit/: __init__.py  iminuit_minimizer.py  minimizable.py  minimizer_base.py
tests/: test_iminuit_minimizer.py
tests/dgf_statistics/: test_MonteCarlo.py
tests/dgf_statistics/minimizer/: test_IMinuitMinimizer.py
