[project]
name = "dgm-fit"
version = "0.1"
description = "The package implements the fitter interface for the DAGModelling framework"
authors = [{ name = "DAGModelling Team", email = "dagflow@jinr.ru" }]
maintainers = [{ name = "DAGModelling Team", email = "dagflow@jinr.ru" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dag-modelling",
  "iminuit",
  "numba",
  "scipy",
]

[project.urls]
homepage = "https://github.com/dagflow-team/dgm-fit"
repository = "https://github.com/dagflow-team/dgm-fit"
documentation = "https://github.com/dagflow-team/dgm-fit/wiki"
"DAGModelling Team" = "https://github.com/dagflow-team"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "coverage"]

[build-system]
requires = ["setuptools", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
  "tests*",
  "docs*",
  "example*",
]
