[build-system]
build-backend = "setuptools.build_meta"

requires = [ "packaging", "setuptools", "wheel" ]

[project]
name = "dgm-fit"
version = "0.1"
description = "The package implements the fitter interface for the DAGModelling framework"
readme = "README.md"
license = "MIT"
maintainers = [ { name = "DAGModelling Team", email = "dag_modelling@jinr.ru" } ]
authors = [ { name = "DAGModelling Team", email = "dag_modelling@jinr.ru" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "dag-modelling",
  "iminuit",
  "numba",
  "scipy",
]

optional-dependencies.dev = [ "coverage", "pytest", "pytest-cov" ]
urls."Bug Tracker" = "https://github.com/dag_modelling-team/dgm-fit/issues"
urls."DAGModelling Team" = "https://github.com/dag_modelling-team"
urls.documentation = "https://github.com/dag_modelling-team/dgm-fit/wiki"
urls.homepage = "https://github.com/dag_modelling-team/dgm-fit"
urls.repository = "https://github.com/dag_modelling-team/dgm-fit"

[tool.setuptools.packages.find]
where = [ "src" ]
exclude = [
  "tests*",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 5
