[build-system]
build-backend = "setuptools.build_meta"

requires = [ "packaging", "setuptools", "setuptools-scm", "wheel" ]

[project]
name = "dgm-fit"
version = "0.3.0"
description = "iminuit interface for the dag-modelling framework"
readme = "README.md"
license = "MIT"
maintainers = [ { name = "DAGModelling Team", email = "dagflow@jinr.ru" } ]
authors = [ { name = "DAGModelling Team", email = "dagflow@jinr.ru" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "dag-modelling",
  "iminuit",
  "numba",
  "scipy",
]

optional-dependencies.test = [ "dag-modelling[test]" ]
urls."Bug Tracker" = "https://github.com/dagflow-team/dgm-fit/issues"
urls."DAGModelling Team" = "https://github.com/dagflow-team"
urls.documentation = "https://github.com/dagflow-team/dgm-fit/wiki"
urls.homepage = "https://github.com/dagflow-team/dgm-fit"
urls.repository = "https://github.com/dagflow-team/dgm-fit"

[tool.setuptools.packages.find]
where = [ "src" ]
exclude = [
  "tests*",
]

[tool.setuptools_scm]
write_to = "src/dgm_fit/__version__.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 5
